# citizenPortal

./: .gitignore  CHANGELOG.md  Dockerfile  app_logger.py  docker-compose.yaml  dto.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample.env
auth/: http_basic_auth.py  oauth_config.py  rbac.py
controllers/: auth_controller.py  static_controllers.py  user_controllers.py
data/: merged_result.json
data_store/: csv_store.py  in_memory_store.py  postgresql_db_store.py
logs/: api_logs.txt
static/: index.html
ui/: index.html
utils/: etl_pipeline.py  extract.py  helper_functions.py  load.py  test_transform.py  transform.py
